[YMCA-1479] - add fix spacing and font size

--- a/docroot/themes/custom/ymca/sass/ysr_2017/_footer.scss
+++ b/docroot/themes/custom/ymca/sass/ysr_2017/_footer.scss
@@ -161,6 +161,9 @@
     @include rem(line-height, 26px);
     color: $grey4;
 
+    br {
+      display: none;
+    }
 
     strong {
       color: $grey5;
